# mock-claude-code

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
snake-game-vue/: index.html  package-lock.json  package.json
snake-game-vue/src/: App.vue
snake-game-vue/src/assets/styles/: global.css
snake-game-vue/src/components/game/: GameCanvas.vue  GameOverModal.vue  ScoreBoard.vue  SnakeGame.vue
snake-game-vue/src/components/ui/: GlowingText.vue  NeonButton.vue
snake-game-vue/src/composables/: useCanvas.ts  useGameLogic.ts  useLocalStorage.ts
snake-game-vue/src/types/: game.ts
src/: qwen3.5_test.py  snake_game.html  test.py
